--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c99 -fPIC")
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 set (SOURCES
-build/duktape/duktape.c)
+build/duktape/duktape.c
+)
 
 add_library (duktape SHARED ${SOURCES})
